# cell_towers

./: .gitignore  LICENSE  README.md
backend/: .env  alembic.ini  config.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e294fc38244a_init.py
backend/db/: session.py
backend/models/: enum.py  models.py  pydantic.py
backend/protos/: task_worker.proto
backend/scripts/: generate_grpc_cpp.sh  generate_grpc_python.sh  web_app_entrypoint.sh
backend/task_worker/: .clang-format  CMakeLists.txt
backend/task_worker/src/: main.cpp  task_worker_service.cpp  task_worker_service.h
backend/web_app/: app.py
backend/web_app/api/v1/: api.py
backend/web_app/api/v1/endpoints/: handlers.py
backend/web_app/core/services/: cell_tower_sevice.py
backend/web_app/grpc_client/: grpc_client.py
docker/: .env  docker-compose-dev.yml  docker-compose.yml
docker/postgres/: Dockerfile
docker/task_worker/: Dockerfile
docker/vue-frontend/: Dockerfile  Dockerfile-dev  nginx.conf
docker/web_app/: Dockerfile
vue-frontend/: index.html  package-lock.json  package.json
vue-frontend/src/: App.vue  main.js
vue-frontend/src/components/: OsmMap.vue
vue-frontend/src/components/map/: config.js  manager.js
